# RustLog

./: README.md
rustlog/: Cargo.toml
rustlog/assets/: dashboard.html
rustlog/examples/: sample-config.toml
rustlog/src/: args.rs  config.rs  filter.rs  kafka_sink.rs  lib.rs  main.rs  matcher.rs  reader.rs  reader_async.rs  sink.rs  transform.rs  web_dashboard.rs
rustlog/tests/: cli_tests.rs  kafka_cli_error.rs  stream_once_async.rs  tail_async.rs  tail_tests.rs  web_router.rs
