[package]
name = "rustlog"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "fs",
    "io-util",
    "time",
] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
